--- a/css/style.css
+++ b/css/style.css
@@ -389,6 +389,15 @@ nav.shrink .logo-loogart {
     }
 }
 
+.img-hero{
+    width:100%;
+    height:69vh;
+    margin-top:20px;
+    border-radius: 1rem;
+    box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
+    object-fit:cover;
+}
+
 .cta-jumbotron {
     margin-top: 40px;
 }
@@ -659,6 +668,8 @@ fieldset[disabled] .btn-white.focus {
     width: 150px;
     height: 150px;
     background-color: #D8D8D8;
+    border-radius: 8px;
+    margin-right:8px;
 }
 
 .carousel-brands {
@@ -687,7 +698,10 @@ fieldset[disabled] .btn-white.focus {
     margin-bottom: 30px;
     -webkit-transition-duration: 0.3s;
     transition-duration: 0.3s;
-    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+    /*box-shadow: 0 14px 28px rgba(0, 0, 0, 0.18), 0 10px 10px rgba(0, 0, 0, 0.12);*/
+        box-shadow: 0 .5rem 1rem rgba(0,0,0,.15)!important;
+        border-radius: 16px;
+
 }
 
 .inner {
@@ -710,7 +724,8 @@ fieldset[disabled] .btn-white.focus {
 .outer:active {
     -webkit-transform: scale(.98);
     transform: scale(.98);
-    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+        box-shadow: 0 .1rem .5rem rgba(0,0,0,.15)!important;
+    /*box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);*/
 }
 
 .portfolio-text {
