--- a/css/style.css
+++ b/css/style.css
@@ -2193,6 +2193,7 @@ section.shop p {
     justify-content: flex-start;
     margin-bottom: 15px;
     padding: 3.69rem 2rem 0;
+    border-radius: 2rem;
 }
 
 .product-box p.link-btn {
